--- a/index.ipynb
+++ b/index.ipynb
@@ -457,7 +457,27 @@
    "outputs": [],
    "source": [
     "m = len(test_images)\n",
-    "test_img_unrow = test_images.reshape(m, -1).T"
+    "test_img_unrow = test_images.reshape(m, -1).T\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m"
    ]
   },
   {
