Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -889,7 +889,7 @@
    "source": [
     "#Your code here; call your function using appropriate parameters\n",
     "w = init_w(64*64*3)\n",
-    "w"
+    "len(w)"
    ]
   },
   {
