Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -554,20 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'not_santa': 0, 'santa': 1}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_generator.class_indices #Run this block of code; no need to edit"
    ]
@@ -719,30 +708,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.7411765 , 0.        , 0.07843138, ..., 0.42352942, 1.        ,\n",
-       "        0.40784314],\n",
-       "       [0.79607844, 0.        , 0.11372549, ..., 0.45490196, 1.        ,\n",
-       "        0.3764706 ],\n",
-       "       [0.8392157 , 0.        , 0.14117648, ..., 0.39607844, 1.        ,\n",
-       "        0.3254902 ],\n",
-       "       ...,\n",
-       "       [0.07058824, 0.        , 0.30980393, ..., 0.5019608 , 1.        ,\n",
-       "        0.05490196],\n",
-       "       [0.08627451, 0.        , 0.32156864, ..., 0.52156866, 1.        ,\n",
-       "        0.03921569],\n",
-       "       [0.09803922, 0.        , 0.15294118, ..., 0.5058824 , 1.        ,\n",
-       "        0.        ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'train_img_final' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-9c42a8013762>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_img_final\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_img_final' is not defined"
+     ]
     }
    ],
    "source": [
@@ -866,24 +844,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       ...,\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.]])"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'init_w' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-7682b6375c79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Your code here; call your function using appropriate parameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minit_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'init_w' is not defined"
+     ]
     }
    ],
    "source": [
