Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
     "    return 1/(1 + np.exp(-((w.T @ x) + b)))\n",
     "    \n",
     "def cost_fun(y, y_hat):\n",
-    "    return -1/len(y_hat) * (y*np.log(y_hat) + (1 - y)*np.log(1 - y_hat)).sum()\n",
+    "    return -1/len(x) * (y*np.log(y_hat) + (1 - y)*np.log(1 - y_hat)).sum()\n",
     "\n",
     "def prop(x, y, w, b):\n",
     "    y_hat = y_hat_fun(x, w, b)\n",
