--- a/index.ipynb
+++ b/index.ipynb
@@ -921,7 +921,7 @@
     "    return 1/(1 + np.exp(-((w.T @ x) + b)))\n",
     "    \n",
     "def cost_fun(y, y_hat):\n",
-    "    return -1/len(x) * (y*np.log(y_hat) + (1 - y)*np.log(1 - y_hat)).sum()\n",
+    "    return -1/x.shape[1] * (y*np.log(y_hat) + (1 - y)*np.log(1 - y_hat)).sum()\n",
     "\n",
     "def prop(x, y, w, b):\n",
     "    y_hat = y_hat_fun(x, w, b)\n",
