Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,8 +926,8 @@
     "def prop(x, y, w, b):\n",
     "    y_hat = y_hat_fun(x, w, b)\n",
     "    cost = cost_fun(y, y_hat)\n",
-    "    dw = 1/len(y_hat) * (x @ (y_hat - y).T)\n",
-    "    db = 1/len(y_hat) * (y_hat - y).sum()\n",
+    "    dw = 1/x.shape[1] * (x @ (y_hat - y).T)\n",
+    "    db = 1/x.shape[1] * (y_hat - y).sum()\n",
     "    return dw, db, cost"
    ]
   },
