--- a/index.ipynb
+++ b/index.ipynb
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,8 @@
      "text": [
       "Cost after iteration 0: 0.693147\n",
       "Cost after iteration 50: 0.675005\n",
-      "Cost after iteration 100: 0.668414\n"
+      "Cost after iteration 100: 0.668414\n",
+      "Cost after iteration 150: 0.662114\n"
      ]
     }
    ],
