--- a/index.ipynb
+++ b/index.ipynb
@@ -1075,7 +1075,7 @@
     "    l = x.shape[1]\n",
     "    y_prediction = np.zeros((1, l))\n",
     "    w = w.reshape(x.shape[0], 1)\n",
-    "    y_hat = #Your code here; the sigmoid function given w, b and x\n",
+    "    y_hat = 1/(1 + )\n",
     "    p = y_hat\n",
     "    \n",
     "    for i in range(y_hat.shape[1]):\n",
