Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,15 +1058,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-474e1c8e5cb6>, line 3)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-39-c4c38aeeda6e>, line 10)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-474e1c8e5cb6>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    y_prediction = #Initialize a prediction vector\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-c4c38aeeda6e>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    return y_prediction\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
