--- a/index.ipynb
+++ b/index.ipynb
@@ -1080,7 +1080,7 @@
     "    \n",
     "    for i in range(y_hat.shape[1]):\n",
     "        #Transform the probability into a binary classification using 0.5 as the cutoff\n",
-    "        if y_hat[]\n",
+    "        if y_hat[0, i] == \n",
     "    return y_prediction"
    ]
   },
