--- a/index.ipynb
+++ b/index.ipynb
@@ -1081,7 +1081,9 @@
     "    for i in range(y_hat.shape[1]):\n",
     "        #Transform the probability into a binary classification using 0.5 as the cutoff\n",
     "        if y_hat[0, i] > 0.5:\n",
-    "            y_hat\n",
+    "            y_prediction = 1\n",
+    "        else:\n",
+    "            y_\n",
     "    return y_prediction"
    ]
   },
