Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1083,7 +1083,7 @@
     "        if y_hat[0, i] > 0.5:\n",
     "            y_prediction = 1\n",
     "        else:\n",
-    "            y_\n",
+    "            y_prediction = 0\n",
     "    return y_prediction"
    ]
   },
