--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,18 +1058,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-39-c4c38aeeda6e>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-39-c4c38aeeda6e>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    return y_prediction\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def prediction(w, b, x):\n",
     "    l = x.shape[1]\n",
@@ -1083,7 +1074,7 @@
     "        if y_hat[0, i] > 0.5:\n",
     "            y_prediction[0, i] = 1\n",
     "        else:\n",
-    "            y_prediction = 0\n",
+    "            y_prediction[0, i] = 0\n",
     "    return y_prediction"
    ]
   },
