Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,6 +1058,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_hat_fun(x, w, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
