Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1062,7 +1062,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_hat_fun(x, w, b)"
+    "y_hat_fun(train_img_final, w, b)"
    ]
   },
   {
